tests/negative/test_mac_arg_preproc_and_plus_esc.orb
mac foo (a::(preprocess plusEscape)) {
    ret ();
};

fnc main () () {};